@@ -7,6 +7,8 @@
   <pattern name="Spaces after punctuation marks" enabled="true"/>
   <pattern name="Spaces after ellipses" enabled="true"/>
   <pattern name="Spaces after starting ellipses" enabled="true"/>
+  <pattern name="Spaces after quotation marks" enabled="true"/>
+  <pattern name="Spaces before quotation marks" enabled="true"/>
   <pattern name="Multiple question- and exclamation marks" enabled="true"/>
   <pattern name="Periods after punctuation marks" enabled="true"/>
 </patterns>
